Fixes spacing between projects

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,9 +75,10 @@ h3{
     var(--ocean-col) 25%,
     /* transparent 75% */
     navy 100%
-  );
+  )
 }
 
+/* || Projects Section */
 #project-section {
   background-color: navy;
   display: flex;
@@ -100,20 +101,21 @@ h3{
 
 .project-section-title {
   text-align: center;
-  border: solid 1px black;
+  border: solid 5px white;
+  padding: 1rem;
   color: white;
   font-size: 3rem;
-  /* text-decoration: underline; */
 }
 .projects-container {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 20vh;
+  gap: 5vh;
 }
 
+/* || Project Cards */
 .project-card{
-  width: 80vw;
+  width: 60vw;
   border: solid 5px lightblue;
   height: 50vh;
 }
@@ -152,8 +154,9 @@ h3{
 
   filter: brightness(30%);
 }
-.project-card-back h1{
+.project-card-back h2{
   margin-top: 5%;
+  
 }
 .project-card-back a{
   margin-bottom: 5%;
@@ -188,23 +191,21 @@ h3{
   object-fit: cover;
 }
 
-.project{
-  width: 80vw;
-  border: solid 5px lightblue;
-  height: 50vh;
-}
 .project img{
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
 .upper {
   display: inline-block;
   font-size: 150%;
 }
 
+/*  */
+/* */
 /* Footer */
+/*  */
+/*  */
 footer{
   background-color: black;
   color: white;
